# ShunscomTest

./: CMakeLists.txt  Readme.md  vcpkg.json
createlib/iolib/: FileIO.cpp  FileIO.h  QualCommDMSerial.cpp  QualCommDMSerial.h  SerialIO.cpp  SerialIO.h  USBIO.cpp  USBIO.h  hdlc.cpp  hdlc.h
createlib/utils/: charutil.cpp  charutil.h  logger.cpp  logger.h  numberhelp.cpp  numberhelp.h  qualcommcommand.h  xmlhelp.cpp  xmlhelp.h
main/: main.cpp
resource/qualcomm/: qualcommand.xml  qualcommandcontent.xml
test/: test.h
